0.3a
	Further UI tweaks.

0.2a
	Major tweaks to improve user interface.
	Fixed bug with \e missing off last character.
	Removed spurious guile dependency.

0.1a
	Initial release.