@@ -1,5 +1,6 @@
 0.3a
 	Further UI tweaks.
+	Don't display full info on connect, just a 'connected' message.
 
 0.2a
 	Major tweaks to improve user interface.
